k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: car-rental.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-rental-app
                port:
                  number: 3000
